    lists, but everything should still function.)

  - Allow Aliases to have actions that will be executed whenever
    any of the expanded Alias targets are out of date.

  - Fix expansion of env.Command() overrides within target and
    source file names.

  - Support easier configurability of what's displayed by various default
    actions through new construction variables:  $ASCOMSTR, $CCCOMSTR,
    $CXXCOMSTR, $LINKCOMSTR, $SHCCCOMSTR and $SHCXXCOMSTR, $SHLINKCOMSTR.

  From Wayne Lee:

  - Avoid "maximum recursion limit" errors when removing $(-$) pairs
    from long command lines.

  From Clive Levinson:

  - Make ParseConfig() recognize and add -mno-cygwin to $LINKFLAGS and
    $CCFLAGS, and -mwindows to $LINKFLAGS.

  From Elliot Murphy:

  - Enhance the tests to guarantee persistence of ListOption
    values in saved options files.

  From Christian Neeb:

  - Fix the Java parser's handling of string definitions to avoid ignoring
    subsequent code.

  From Han-Wen Nienhuys:

  - Optimize variable expansion by:  using the re.sub() method (when
    possible); not using "eval" for variables for which we can fetch the
    value directory; avoiding slowing substitution logic when there's no
    '$' in the string.

  From Gary Oberbrunner:

  - Add an Environment.Dump() method to print the contents of a
    construction environment.

  - Allow $LIBS (and similar variables) to contain explicit File Nodes.

  - Change ParseConfig to add the found library names directly to the
    $LIBS variable, instead of returning them.

  - Add ParseConfig() support for the -framework GNU linker option.

  - Add a PRINT_CMD_LINE_FUNC construction variable to allow people
    to filter (or log) command-line output.

  - Print an internal Python stack trace in response to an otherwise
    unexplained error when --debug=stacktrace is specified.

  - Add a --debug=findlibs option to print what's happening when
    the scanner is searching for libraries.
